--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ username: Achraf Mountassir
 # > set this to your job title, e.g. Fullstack Developer
 typing_text: Security Engineer & Vulnerability researcher
 # email: Your E-Mail address for the email button.
-email: achraf_mountassirr@gmail.com
+email: achraf.mountassirr@gmail.com
 # For every social button you want to display, set your username or userid
 # If you do not use one of the following websites, then leave it empty
 # > twitter_username:
