--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ baseurl: ""
 username: Achraf Mountassir
 # typing_text: This will be typed before 'scroll down for more'.
 # > set this to your job title, e.g. Fullstack Developer
-typing_text: Security Engineer & Vulnerability researcher
+typing_text: Security Analyst 
 # email: Your E-Mail address for the email button.
 email: achraf.mountassirr@gmail.com
 # For every social button you want to display, set your username or userid
